<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp">

    <ImageView
        android:id="@+id/product_image"
        android:src="@drawable/ic_add_a_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="40dp" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/product_image"
        android:layout_toRightOf="@id/product_image"
        android:hint="@string/product_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:layout_toRightOf="@id/product_image"
        android:hint="@string/product_price"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/product_id_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_image"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_id"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/product_id"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/product_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_total_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_id_view"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_total_quantity"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/total_quantity_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/value_total_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_stock"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_current_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_total_quantity"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/current_stock"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_stock"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_sold_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_current_quantity"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_sold_quantity"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/text_sold_quantity"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sold_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_supplier_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_sold_quantity"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_supplier_email"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/supplier_email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/supplier_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email_Id"
            android:textSize="12sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_supplier_email"
        android:layout_marginBottom="8dp"
        android:hint="@string/description_hint"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/new_order_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/make_new_order" />

        <EditText
            android:id="@+id/new_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/new_quantity"
            android:textSize="16sp" />

        <Button
            android:id="@+id/place_order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place_order_button" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_order_view"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button" />


    </LinearLayout>
</RelativeLayout>